--- a/TestTaskCoin/TestTaskCoin.csproj
+++ b/TestTaskCoin/TestTaskCoin.csproj
@@ -66,8 +66,12 @@
     <Compile Include="MVVM\Models\TopCryptoCurrenciesResponse.cs" />
     <Compile Include="MVVM\ViewModels\BaseViewModel.cs" />
     <Compile Include="MVVM\ViewModels\DetailsViewModel.cs" />
+    <Compile Include="MVVM\ViewModels\SearchViewModel.cs" />
     <Compile Include="MVVM\Views\DetailsPage.xaml.cs">
       <DependentUpon>DetailsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MVVM\Views\SearchPage.xaml.cs">
+      <DependentUpon>SearchPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Services\CoinCapService.cs" />
     <Compile Include="Services\ICoinCapService.cs" />
@@ -89,6 +93,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MVVM\Views\MainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MVVM\Views\SearchPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
